# Graduate_Student_Seminar_2025-09-04

./: .gitignore  AGENTS.md  CAS_Forum_20240616.html  LICENSE  LICENSE-CODE  LICENSE-CONTENT  Makefile  README.md  References_bib.html  command.vim  index.html  index_2024.html  mystyle.css  mystyle_2025.css  pyproject.toml
Ballistic_decomposition/: BD_Movie.py  RD_Movie.py  RD_Movie_SurfaceRelax.py
Longest_increasing_subsequence/: Animation-LIS-LPP.md  Animation-LSI.md  Animation-Percolation.md  Animation-RSK.md  Animation-YoungTableaux.md  README.md  Young_tableaux_permuation.md  lis_dp.py  lis_lpp_animation.py  lis_manim.py  lis_manim_gemini.py  lis_random_permutations.py  rsk_algorithm.py  young_tableaux_animation.py
bibtex/: All.bib  Ref.tex  Ref_biber.bib  References.html  command.vim  tags  work.sh
css/theme/: README.md
videos/: working.sh
